apps/base/selfhosted/invidious/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious
  namespace: selfhosted
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: watch.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "600"
spec:
  rules:
    - host: watch.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invidious-invidious
                port:
                  number: 3000
  tls:
    - secretName: watch-thekitty-zone-tls
      hosts:
         - watch.thekitty.zone
